--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <p>Copyright &copy;2023; Designed by <span class="designer">Neil Tristan Trangia</span></p>
+</div>    
 </body>
 </html>
